org.apache.juneau.common.reflect API improvements